--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ click==8.3.0
 fastapi==0.118.0
 h11==0.16.0
 idna==3.10
+prometheus-fastapi-instrumentator==7.1.0
+prometheus_client==0.23.1
 pydantic==2.11.9
 pydantic_core==2.33.2
 sniffio==1.3.1
@@ -11,3 +13,7 @@ starlette==0.48.0
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 uvicorn==0.37.0
+pytest
+pytest-cov
+httpx
+
