--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,18 @@
 version: "3.8"
 
 services:
+
+  app:
+    build: .
+    container_name: grocery_app
+    ports:
+      - "8000:8000"
+    depends_on:
+      - prometheus
+    environment:
+      - PROMETHEUS_MULTIPROC_DIR=/tmp
+    restart: unless-stopped
+
   prometheus:
     image: prom/prometheus:latest
     container_name: prom-grocery
