Fix CI by initializing database before tests and updating workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,13 @@ jobs:
           pip install -r requirements.txt
           pip install pytest pytest-cov
 
+      - name: Initialize test database
+        run: |
+          python - <<EOF
+          from app.db import init_db
+          init_db()
+          EOF
+
       - name: Run tests with coverage enforcement
         run: |
           pytest --cov=app \
